<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        />


</LinearLayout>