<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <TextView
        android:id="@+id/off_line_scan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/outline_see"
        android:textColor="#000000"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"
        />
    <TextView
        android:id="@+id/tickling"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/set"
        android:textColor="#000000"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"
        />
    <TextView
        android:id="@+id/setting"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exit_load"
        android:textColor="#000000"
        android:textSize="20sp"/>

</LinearLayout>