<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/strategy_detail_Iv"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:src="@mipmap/b" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:id="@+id/chinese_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/china"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/us_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="chinese"
                android:layout_marginLeft="4dp"
                android:textColor="#ffffff"
                android:textSize="16sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/download_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@mipmap/download_destination_normal" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/strategy_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/strategy_rb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/strategy_rb"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/strategy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/travel_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/travel_rb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/travel_rb"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Route" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/journey_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/journey_rb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/journey_rb"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/travel_place" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topics_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/topics_rb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/topics_rb"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/topic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>