<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/box_relayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开启工具箱"
            android:textColor="#000000"
            android:id="@+id/toolbox_btn"
            android:layout_gravity="center_horizontal"
            android:background="#589de4"
            android:layout_marginTop="93dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/toolbox_empty_flag"
            android:layout_marginBottom="49dp"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择下一次旅行的期许之地"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/box_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#ebf0f5"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tool_box_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="北京"
                android:textColor="#000000"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/_go_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="18dp"
               android:layout_toRightOf="@+id/tool_box_name"
                android:src="@mipmap/arrow_left_normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:id="@+id/temper1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="#37abdf"
                android:textSize="60dp" />

            <TextView
                android:id="@+id/temper_login1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/temper1"
                android:text="°C"
                android:textSize="20sp"
                android:textColor="#37abdf" />

            <TextView
                android:id="@+id/temper_lines"
                android:layout_width="25dp"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/temper_login1"
                android:background="#cdcdcd"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/temper2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/temper_lines"
                android:text="18"
                android:textColor="#fd402a"
                android:textSize="60dp" />

            <TextView
                android:id="@+id/temper_login2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/temper2"
                android:text="°C"
                android:textSize="20sp"
                android:textColor="#fd402a" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tool_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tool_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tool_text_tv"
                android:text="16:34"
                android:textColor="#000000"
                android:textSize="17sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <ImageView
                android:id="@+id/speech_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="@drawable/translation_selector"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/voice"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/jizhang_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/jizhang_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageView
                android:id="@+id/map_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:background="@drawable/map_selector"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/map"
                android:textColor="#000000"
                android:textSize="20dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/huilv_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:background="@drawable/tools_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excate"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>